# ia41-project

./: Cargo.toml  LICENSE  README.md  board.py  canvas.py  example_board  main-old.py  main.py  parse.py  render.py  solve.py
boards/: complex.txt  expert.txt  less_trivial.txt  maximal.txt  no_solution.txt  prez-1.txt  prez-2.txt  simple.txt  trivial.txt
rust/: bench.rs  board.rs  car.rs  main.rs  tree.rs
rust/tree/: hash.rs  list.rs  mod.rs
