[package]
name = "ia41_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bitboard"]
bitboard = []
precise_hash = []

[dependencies]
fasthash = "0.4.0"
rand = "0.8"

[dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[profile.release]
debug = true

[[bin]]
name = "ia41_project"
path = "rust/main.rs"

[[bench]]
name = "bench"
path = "rust/bench.rs"
harness = false
